projekt-compiler/test/misc/unsorted/fail/s_simplest_func (33).rail
$'main'(--):
 \
  \
   \
    \
     \
      \------#

1


$'main'(--):
 \
  \
   \
    \
     \
      \------#


2



$'main'(--):
 \
  \
   \
    \
     \
      \------#


3




$'main'(--):
 \
  \
   \
    \
     \
      \------#

4





$'main'(--):
 \
  \
   \
    \
     \
      \------#

5


takes the last 'main' function (number 5)